tests/fail/ch_stable/invalid_custom_regex.rs
fn main() {
    sscanf::scanf!("", "   {/ab(ab/}   ", String).unwrap();
}
